# Discount-Strategy-Dashboard

./: .gitignore  Dashboard.html  Dashboard.qmd  README.md  app.py  dashboard.html  main.py  navbar-filter.lua  pyproject.toml  requirements.txt  styles.css
_build/: Dashboard.html  app.py  styles.css
components/: Discount_logic.py  table_logic.py  table_visual.py
dataset/: PowerBI-EDA.pbix  about-dataset.txt  sample_-_superstore.xls
documentation/: code_explanation.md
