[project]
name = "posit-2025-table-contest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "great-tables>=0.18.0",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "shiny>=1.5.0",
    "shinywidgets>=0.7.0",
    "xlrd>=2.0.2",
]
